src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_NoCommaInMarkupExtension.xaml


<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
    xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">     
      <Button Background="{cc:CustomColorBlender  Core =   &apos; Red &apos;  Additive=Green}" />          
</DockPanel>
</Page>
